Made some changes on the HTML file.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>title</title>
   </head>
+
   <body>
-  <h1>My Name</h1>
-  <p>About me...</p>
+    <h1>My Name is Max Charles and this my website</h1>
+    <p>About me...I am a System Engineer and looking to learn how to code.</p>
   </body>
+
 </html>
